Fixed horizontal and vertical spacing between tiles

--- a/styles/index.css
+++ b/styles/index.css
@@ -65,9 +65,15 @@ body {
   }
 
   > main {
-    @apply pb-20 px-4 md:px-16;
+    @apply pt-10 pb-20 px-4 md:px-16 space-y-20;
 
-    article { @apply tile; }
+    article {
+      @apply tile;
+
+      & > ul {
+        @apply mt-20;
+      }
+    }
   }
 
   > section {
